[package]
name = "ca-vaccination-decode"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
image = "0.23.4"
inflate = "0.4.5"
jsonwebtoken = "7.2.0"
quircs = "0.10"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
